deployment.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2020-11-20T13:28:30Z"
  labels:
    app: gke-app
  name: gke-app-service
  namespace: default
  resourceVersion: "361640"
  selfLink: /api/v1/namespaces/default/services/gke-app-service
  uid: d5629e03-4d5c-4669-ada0-86378dccc908
spec:
  clusterIP: 10.48.11.25
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31212
    port: 8989
    protocol: TCP
    targetPort: 3000
  selector:
    app: gke-app
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
